Fixed dark mode not applying correctly

--- a/input.css
+++ b/input.css
@@ -1,30 +1,33 @@
 @import "tailwindcss";
 
-/* Default dark mode colors */
+/* Default light mode colors */
 @theme {
   /* Text */
-  --color-foreground: #a9b1d6;
+  --color-foreground: #343b58;
   /* Background */
-  --color-storm-night: #24283b;
+  --color-storm-night: #e6e7ed;
   /* Various colors */
-  --color-terminal-red: #f7768e;
-  --color-terminal-orange: #ff9e64;
-  --color-terminal-yellow: #e0af68;
-  --color-terminal-green: #9ece6a;
-  --color-terminal-azure: #2ac3de;
-  --color-terminal-purple: #bb9af7;
+  --color-terminal-red: #8c4351;
+  --color-terminal-orange: #965027;
+  --color-terminal-yellow: #8f5e15;
+  --color-terminal-green: #385f0d;
+  --color-terminal-azure: #0f4b6e;
+  --color-terminal-purple: #5a3e8e;
 }
 
-/* Adapt theme to light mode */
-@media (prefers-color-scheme: light) {
+/* Adapt theme to dark mode */
+@media (prefers-color-scheme: dark) {
   @theme {
-    --color-foreground: #343b58;
-    --color-storm-night: #e6e7ed;
-    --color-terminal-red: #8c4351;
-    --color-terminal-orange: #965027;
-    --color-terminal-yellow: #8f5e15;
-    --color-terminal-green: #385f0d;
-    --color-terminal-azure: #0f4b6e;
-    --color-terminal-purple: #5a3e8e;
+    /* Text */
+    --color-foreground: #a9b1d6;
+    /* Background */
+    --color-storm-night: #24283b;
+    /* Various colors */
+    --color-terminal-red: #f7768e;
+    --color-terminal-orange: #ff9e64;
+    --color-terminal-yellow: #e0af68;
+    --color-terminal-green: #9ece6a;
+    --color-terminal-azure: #2ac3de;
+    --color-terminal-purple: #bb9af7;
   }
 }
